<resources>
    <string name="app_name">Sensapp</string>
    <string name="inicio">Inicio</string>
    <string name="configurar">Configurar</string>
    <string name="info">Info</string>
    <string name="pantalla_de_alertas">Pantalla de Alertas</string>
    <string name="inicio_kpis_esp32">Inicio - KPIs ESP32</string>
    <string name="pantalla_de_configurar">Pantalla de Configurar</string>
    <string name="pantalla_de_usuario">Pantalla de Usuario</string>
    <string name="pantalla_de_informacion">Pantalla de Informacion</string>
    <string name="alertas">Alertas</string>
    <string name="probar_conexion">Probar conexión</string>
    <string name="guardar">Guardar</string>
    <string name="http_192_168_1_xx_status">http://192.168.1.xx/status</string>
    <string name="nombre_del_dispositivo">Nombre del dispositivo</string>
    <string name="zona_lugar">Zona/Lugar</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="crear">Crear</string>
    <string name="estado_normal">Estado: Normal</string>
    <string name="sensores_activos_2">Sensores activos: 2</string>
    <string name="ultima_alerta">Última alerta: --</string>
    <string name="movimientos_0">Movimientos: 0</string>
    <string name="inicio_kpis_del_dispositivo">Inicio - KPIs del dispositivo</string>
    <string name="nivel_advertencia">Nivel: Advertencia</string>
    <string name="patio_pir_01">Patio · PIR 01</string>
    <string name="_10_11_2025_12_41_03">10-11-2025 12:41:03</string>
    <string name="crear_usuario">Crear</string>
    <string name="configurar2">Configurar</string>
    <string name="alertas2">Alertas</string>
    <string name="inicio2">Inicio</string>
    <string name="usuario2">Usuario</string>
    <string name="info2">Info</string>
    <string name="actualizar">Actualizar</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario_register">Usuario</string>
    <string name="correo_register">Correo</string>
    <string name="nombre_register">Nombre</string>
</resources>