<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="8dp"
    android:elevation="2dp"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtFechaHora"
        android:text="@string/_10_11_2025_12_41_03"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtLugarSensor"
        android:text="@string/patio_pir_01"
        android:textColor="@color/colorTextSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtNivel"
        android:text="@string/nivel_advertencia"
        android:textColor="@color/colorTextPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAlertas"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
